Optimisation Commit: Asynchronous Loading, Optimize FFmpeg Commands and creating Cache Metadata.